# Umeki

./: pyproject.toml
umeki/: __main__.py  base.py  umeki.py
umeki/data/: base.py
