[tool.poetry]
name = "umeki"
version = "0.1.0"
description = ""
authors = ["coming <kangming06@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
dearpygui = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
